--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,16 @@
 spring:
   datasource:
-    driverClassName: org.mariadb.jdbc.Driver
+#    driverClassName: org.mariadb.jdbc.Driver
     type: com.zaxxer.hikari.HikariDataSource
-    url: jdbc:mariadb://198.13.47.188:19762/MINICOMMERCE?characterEncoding=UTF-8&serverTimezone=UTC
+    url: jdbc:log4jdbc:mariadb://198.13.47.188:19762/MINICOMMERCE?characterEncoding=UTF-8&serverTimezone=UTC
     username: mrbluesky
     password: kang12!@
+    driver-class-name: net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+
+mybatis:
+  mapper-locations:
+    - mybatis/*.xml
+
+logging:
+  level:
+    goods: TRACE
