--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,17 @@ spring:
     username: mrbluesky
     password: kang12!@
     driver-class-name: net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: 1234
+    password: 1234
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
 server:
   port: 8088
 
@@ -16,4 +26,4 @@ mybatis:
 
 logging:
   level:
-    goods: ERROR
+    goods: debug
